--- a/templates/base.html
+++ b/templates/base.html
@@ -3,37 +3,41 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Meta tags -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Reedmaker studio lets musicians post and interact on articles and specifications of reeds.">
+    <meta name="description" content="Reedmaker Studio lets musicians post and interact on articles and specifications of reeds.">
+
+    <!-- Dynamic page title -->
     <title>{% block title %}Reedmakers Studio{% endblock %}</title>
-    
-    <!-- Boostrap CSS -->
+
+    <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+
     <!-- Custom CSS -->
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
-         
+
 <body class="d-flex flex-column min-vh-100">
-    <!-- Navbar -->
+    
+    <!-- Navigation -->
     {% include 'components/_navbar.html' %}
 
+    <!-- Page Content -->
     <main class="container mt-4 mb-5">
         {% include 'components/_messages.html' %}
-        {% block content %}
-        <!-- Content goes here -->
-        {% endblock %}
+        {% block content %}{% endblock %}
     </main>
 
     <!-- Footer -->
     {% include 'components/_footer.html' %}
 
-    <!-- Bootstrap Javascript -->  
+    <!-- Scripts -->
+    <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <!-- Custom Javascript -->   
-         <!-- Script to toggle between light and dark theme on the site -->    
+
+    <!-- Custom JS -->
     <script src="{% static 'js/theme-toggle.js' %}"></script>
-         <!-- Script to ensure any action on a form trigger a submit -->    
     <script src="{% static 'js/auto-submit.js' %}"></script>
 </body>
 </html>
