--- a/templates/reeds/reed_form.html
+++ b/templates/reeds/reed_form.html
@@ -10,15 +10,11 @@
         <form method="post">
           {% csrf_token %}
           {{ form|crispy }}
-          <button type="submit" class="btn btn-primary w-100">Save</button>
-          <a href="{% url 'reed_list' %}">Back</a>
+          <button type="submit" class="btn btn-primary mb-3">Save</button>
+          <a href="{% url 'reed_list' %}" class="btn btn-primary mb-3">Quit</a>
         </form>
       </div>
     </div>
   </div>
 </div>
 {% endblock %}
-
-
-
-
