--- a/templates/posts/post_detail.html
+++ b/templates/posts/post_detail.html
@@ -1,19 +1,89 @@
 {% extends 'base.html' %}
-{% block title %}Detailed view of a selected blog post{% endblock %}
+{% block title %}Details about post {{ post.title }}{% endblock %}
+{% load crispy_forms_tags %}
+{% load static %}
+
 {% block content %}
+<section class="container section">
 
-<!-- Display a Post in detail -->
-<div class="card mb-4">
-  <div class="card-body">
-    <h2 class="card-title">{{ post.title }}</h2>
-    <p class="card-text">{{ post.body }}</p>
-    <p class="text-muted">By {{ post.author }} | Created {{ post.created_on|date:"Y-m-d" }} | Updated {{ post.updated_on|date:"Y-m-d" }}</p>
+  <!-- Page title -->
+  <div class="row mb-4">
+    <div class="col-12 text-center">
+      <h2 class="display-6">Enjoy the full article</h2>
+    </div>
   </div>
-</div>
 
-<!-- Option to Edit or Delete a Post, if the user is the owner -->
-{% if user == post.author %}
-  <a href="{% url 'post_update' post.pk %}" class="btn btn-warning">Edit</a>
-  <a href="{% url 'post_delete' post.pk %}" class="btn btn-danger">Delete</a>
-{% endif %}
+  <!-- Image + summary -->
+  <div class="row align-items-start mb-5">
+    <div class="col-12 col-md-6">
+      <img src="{% static 'images/blogging.jpg' %}"
+           alt="Image illustrating blogging"
+           class="img-fluid w-100 object-fit-cover"
+           style="max-height: 300px;">
+    </div>
+    <div class="col-12 col-md-6">
+      <h4><strong>Title</strong></h4>
+      <p>{{ post.title }}</p>
+      <h4><strong>Author</strong></h4>
+      <p>{{ post.author }}</p>
+      <h4><strong>Created</strong></h4>
+      <p>{{ post.created_on|date:"Y-m-d" }}</p>
+      <h4><strong>Updated</strong></h4>
+      <p>{{ post.updated_on|date:"Y-m-d" }}</p>
+    </div>
+  </div>
+
+  <!-- Post content -->
+  <div class="row mb-5">
+    <div class="col-12">
+      <div class="card">
+        <div class="card-header">
+          <h3 class="card-title sub-heading-color">{{ post.title }}</h3>
+        </div>
+        <div class="card-body">
+          <p class="card-text">{{ post.body }}</p>
+        </div>
+        <div class="card-footer text-muted">
+          By {{ post.author }} | Last updated {{ post.updated_on|date:"Y-m-d" }}
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Edit/Delete buttons -->
+  {% if user == post.author %}
+  <div class="row mb-4">
+    <div class="col-12 text-end">
+      <a href="{% url 'post_update' post.pk %}" class="btn btn-primary me-2">Edit</a>
+      <a href="{% url 'post_delete' post.pk %}" class="btn btn-danger">Delete</a>
+    </div>
+  </div>
+  {% endif %}
+
+  <!-- Comments -->
+  {% include 'components/_comments.html' %}
+
+  <!-- Modal for comment -->
+  <div class="modal fade" id="commentModal" tabindex="-1" aria-labelledby="commentModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <form method="post">
+        {% csrf_token %}
+        <input type="hidden" name="submit_comment" value="1">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="commentModalLabel">Add Comment</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+            {{ form|crispy }}
+          </div>
+          <div class="modal-footer">
+            <button type="submit" class="btn btn-primary">Post Comment</button>
+          </div>
+        </div>
+      </form>
+    </div>
+  </div>
+
+</section>
 {% endblock %}
