--- a/templates/reeds/reed_detail.html
+++ b/templates/reeds/reed_detail.html
@@ -6,7 +6,7 @@
 {% block content %}
 <section class="container section">
 
-  <!-- Reed title -->
+  <!-- Page title -->
   <div class="row mb-4">
     <div class="col-12 text-center">
       <h2 class="display-6">Details about reed {{ reed.item_id }}</h2>
@@ -131,30 +131,20 @@
         </div>
       </div>
     </div>
-    <!-- Comments -->
-    <div class="col-12">
-      <div class="card h-100">
-        <div class="card-header">
-          <h3 class="display-6 mb-0 sub-heading-color">Comments</h3>
-        </div>
-        <div class="card-body">
-          <ul class="list-group mb-4">
-            {% for comment in comments %}
-              <li class="list-group-item">
-                <strong>{{ comment.author }}</strong>: {{ comment.body }}, {{ comment.created_on|date:"Y-m-d H:i" }}
-              </li>
-            {% empty %}
-              <li class="text-muted">No comments yet.</li>
-            {% endfor %}
-          </ul>
-        </div>
-        <div class="card-footer">
-          <!-- Button to open modal -->
-          <button class="btn btn-outline-secondary" data-bs-toggle="modal" data-bs-target="#commentModal">➕ Add Comment</button>
-        </div>
-      </div>
+  </div>
+
+  {% if user == post.author %}
+  <div class="row mb-4">
+    <div class="col-12 text-end">
+      <a href="{% url 'reed_update' post.pk %}" class="btn btn-primary me-2">Edit</a>
+      <a href="{% url 'reed_delete' post.pk %}" class="btn btn-danger">Delete</a>
     </div>
   </div>
+  {% endif %}
+
+  <!-- All related comments -->
+  {% include 'components/_comments.html' %}
+
 </section>
 
 <!-- Modal for adding an Event -->
