post list updated with login required to add an article

--- a/templates/posts/post_detail.html
+++ b/templates/posts/post_detail.html
@@ -60,7 +60,7 @@
   </div>
   {% endif %}
 
-  <!-- Comments -->
+  <!-- All related comments -->
   {% include 'components/_comments.html' %}
 
   <!-- Modal for comment -->
