--- a/templates/posts/post_list.html
+++ b/templates/posts/post_list.html
@@ -1,15 +1,80 @@
 {% extends 'base.html' %}
 {% block title %}All posts{% endblock %}
+{% load static %}
+{% load crispy_forms_tags %}
+
+<!-- Content starts here -->
 {% block content %}
 
-<!-- List all logged Posts with selected metadata -->
-<h1 class="mb-4">Reedmaker blog posts</h1>
-<ul class="list-group">
+<!-- Page title -->
+<section class="container section">
+  <div class="row mb-4">
+    <div class="col-12 text-center">
+      <h2 class="display-6">Overview of all articles</h2>
+    </div>
+  </div>
+</section>
+
+<!-- Button to open modal -->
+{% if user.is_authenticated %}
+  <div class="text-end mb-4">
+    <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#addPostModal">
+      ➕ Add New Post
+    </button>
+  </div>
+{% endif %}
+
+<!-- Card for posts -->
+<div class="row g-4">
   {% for post in posts %}
-    <li class="list-group-item">
-      <a href="{% url 'post_detail' post.pk %}">{{ post.title }} | {{ post.author }}</a>
-    </li>
+    <div class="col-12 col-md-6 col-lg-3">
+      <div class="card h-100 d-flex flex-column">
+        {% if post.image %}
+          <img src="{{ post.image.url }}" class="card-img-top" alt="Post image">
+        {% else %}
+          <img src="{% static 'images/blogging.jpg' %}" class="card-img-top" alt="Default image">
+        {% endif %}
+    
+        <div class="card-body d-flex flex-column">
+          <h5 class="card-title">{{ post.title }}</h5>
+          <p class="card-text text-muted">By {{ post.author }}</p>
+          <p class="card-text">{{ post.body|truncatechars:200 }}</p>
+          <a href="{% url 'post_detail' post.pk %}" class="btn btn-outline-primary mt-auto">Read more</a>
+        </div>
+    
+        <div class="card-footer">
+          <small class="text-muted">
+            Created: {{ post.created_on|date:"Y-m-d" }}<br>
+            Updated: {{ post.updated_on|date:"Y-m-d" }}
+          </small>
+        </div>
+      </div>
+    </div>
   {% endfor %}
-</ul>
-<a href="{% url 'post_create' %}" class="btn btn-primary mb-3">Add a new post</a>
+</div>
+
+<!-- Modal to add a new post to the list -->
+{% if user.is_authenticated %}
+<div class="modal fade" id="addPostModal" tabindex="-1" aria-labelledby="addPostModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <form method="post">
+      {% csrf_token %}
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="addPostModalLabel">Create New Post</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          {{ form|crispy }}
+        </div>
+        <div class="modal-footer">
+          <button type="submit" class="btn btn-primary">Save Post</button>
+        </div>
+      </div>
+    </form>
+  </div>
+</div>
+{% endif %}
+
 {% endblock %}
+
