--- a/staticfiles/css/style.css
+++ b/staticfiles/css/style.css
@@ -1,3 +1,4 @@
+/* Google fonts import */
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&family=Roboto:wght@300;400&display=swap');
 
 /* Light theme */
@@ -5,33 +6,40 @@
   --font-primary: 'Montserrat', sans-serif;
   --font-secondary: 'Roboto', sans-serif;
 
-  --bg: #fffffe;
-  --highlight: #bdc2bf;
-  --text: #25291c;
-  --accent: rgb(228, 228, 13);
+  --color-primary: white;
+  --color-secondary:#25291c;
+  --color-tertiary: #bdc0d1;
+  --color-text: #25291c;
+  --color-accent: rgb(231, 231, 181);
 
-  --card-bg: #bdc2bf;
+  --card-bg: #f0f3b2;
   --btn-bg: #e6e49f;
   --btn-hover: #bdc2bf;
 }
 
 /* Dark theme overrides */
 .dark-mode {
-  --bg: #25291c;
-  --highlight: #989c94;
-  --text: #e3e7d3;
-  --accent: #bdc2bf;
+  --color-primary: white;
+  --color-secondary:#25291c;
+  --color-tertiary: #bdc0d1;
+  --color-text: #e3e7d3;
+  --color-accent: #1f15e0;
 
-  --card-bg: #989c94;
+  --card-bg: #eef5b1;
   --btn-bg: #bdc2bf;
   --btn-hover: #989c94;
 }
 
 body {
   font-family: var(--font-secondary);
-  background-color: var(--bg);
-  color: var(--text);
+  background-color: var(--color-primary);
+  color: var(--color-text);
   transition: background-color 0.3s ease, color 0.3s ease;
+}
+
+.navbar {
+    background-color: var(--color-secondary)
+    color: var(--color-primary)
 }
 
 h1, h2, h3, h4 {
@@ -39,7 +47,7 @@ h1, h2, h3, h4 {
 }
 
 a {
-  color: var(--text);
+  color: var(--color-text);
   text-decoration: none;
 }
 a:hover {
@@ -47,21 +55,28 @@ a:hover {
 }
 
 .card {
-  background-color: var(--card-bg);
+  background-color: var(--color-tertiary);
   border: none;
 }
 
 .btn-primary {
   background-color: var(--btn-bg);
   border-color: var(--btn-bg);
-  color: var(--text);
+  color: var(--color-text);
 }
 .btn-primary:hover {
   background-color: var(--btn-hover);
   border-color: var(--btn-hover);
-  color: var(--text);
+  color: var(--color-text);
 }
 
-.navbar {
-  transition: background-color 0.3s ease;
-}
+.btn-secondary {
+    background-color: var(--btn-bg);
+    border-color: var(--btn-bg);
+    color: var(--text);
+  }
+  .btn-secondary:hover {
+    background-color: var(--btn-hover);
+    border-color: var(--btn-hover);
+    color: var(--text);
+  }
