--- a/templates/reeds/reed_list.html
+++ b/templates/reeds/reed_list.html
@@ -18,7 +18,7 @@
 <section>
   <div class="row align-items-start mb-5">
     <!-- Filter Form -->
-    <form method="get" class="row g-3 mb-4">
+    <form id="reed-filter-form" method="get" class="row g-3 mb-4">
       <div class="col-md-4">
         <label for="instrument" class="form-label">Instrument</label>
         <select name="instrument" id="instrument" class="form-select" onchange="this.form.submit()">
