--- a/templates/base.html
+++ b/templates/base.html
@@ -24,7 +24,7 @@
     {% include 'components/_navbar.html' %}
 
     <!-- Page Content -->
-    <main class="container mt-4 mb-5">
+    <main class="container flex-grow-1 my-4">
         {% include 'components/_messages.html' %}
         {% block content %}{% endblock %}
     </main>
