--- a/templates/components/_footer.html
+++ b/templates/components/_footer.html
@@ -1,3 +1,6 @@
-<footer class="mt-auto bg-dark text-light text-center py-3">
-    <p>&copy; 2025 Reedmakers</p>
-  </footer>
+<footer id="footer" class="mt-auto text-center py-5">
+  <div class="container">
+    <p class="copyright">&copy; 2025 Reedmakers</p>
+    <small>Crafted with care for musicians</small>
+  </div>
+</footer>
