--- a/templates/home.html
+++ b/templates/home.html
@@ -31,7 +31,7 @@
         <div class="col-12 col-md-6 col-lg-6">
             <div class="card h-100">
                 <div class="card-header">
-                    <h3 class="display-7 mb-0 sub-heading-color">Build your digital reedcase</h3>
+                    <h3 class="display-7 mb-0">Build your digital reedcase</h3>
                 </div>
                 <div class="card-body">
                     <p class="card-text">
