--- a/templates/components/_navbar.html
+++ b/templates/components/_navbar.html
@@ -16,7 +16,7 @@
           Log out
         </button>
       {% else %}
-        <a class="btn btn-sm btn-custom-primary me-2" href="{% url 'account_login' %}">Log in</a>
+        <a class="btn btn-sm btn-custom-secondary me-2" href="{% url 'account_login' %}">Log in</a>
         <a class="btn btn-sm btn-custom-primary" href="{% url 'account_signup' %}">Register</a>
       {% endif %}
     </div>
@@ -43,7 +43,7 @@
             Log out
           </button>
         {% else %}
-          <a class="btn btn-sm btn-custom-primary me-2" href="{% url 'account_login' %}">Log in</a>
+          <a class="btn btn-sm btn-custom-secondary me-2" href="{% url 'account_login' %}">Log in</a>
           <a class="btn btn-sm btn-custom-primary" href="{% url 'account_signup' %}">Register</a>
         {% endif %}
       </div>
