--- a/templates/posts/post_detail.html
+++ b/templates/posts/post_detail.html
@@ -54,8 +54,8 @@
   {% if user == post.author %}
   <div class="row mb-4">
     <div class="col-12 text-end">
-      <a href="{% url 'post_update' post.pk %}" class="btn btn-primary me-2">Edit</a>
-      <a href="{% url 'post_delete' post.pk %}" class="btn btn-danger">Delete</a>
+      <a href="{% url 'post_update' post.pk %}" class="btn btn-custom-secondary me-2">Edit</a>
+      <a href="{% url 'post_delete' post.pk %}" class="btn btn-custom-primary">Delete</a>
     </div>
   </div>
   {% endif %}
@@ -73,12 +73,12 @@
           <div class="modal-header">
             <h5 class="modal-title" id="commentModalLabel">Add Comment</h5>
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-          </div>
+          </div>          
           <div class="modal-body">
             {{ form|crispy }}
           </div>
           <div class="modal-footer">
-            <button type="submit" class="btn btn-primary">Post Comment</button>
+            <button type="submit" class="btn btn-custom-secondary">Post Comment</button>
           </div>
         </div>
       </form>
