--- a/templates/posts/post_form.html
+++ b/templates/posts/post_form.html
@@ -10,7 +10,7 @@
         <form method="post">
           {% csrf_token %}
           {{ form|crispy }}
-          <button type="submit" class="btn btn-primary w-100">Save</button>
+          <button type="submit" class="btn btn-custom-primary w-100">Save</button>
         </form>
       </div>
     </div>
