--- a/templates/reeds/reed_detail.html
+++ b/templates/reeds/reed_detail.html
@@ -40,7 +40,6 @@
     </div>  
   </div>
 
-
   <!-- Cards with categories of information -->
     <!-- Material -->
   <div class="row g-4">
@@ -156,13 +155,13 @@
       <div class="modal-content">
         <div class="modal-header">
           <h5 class="modal-title" id="eventModalLabel">Add Event</h5>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          <button type="button" class="btn btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
           {{ event_form|crispy }}
         </div>
         <div class="modal-footer">
-          <button type="submit" class="btn btn-primary">Save Event</button>
+          <button type="submit" class="btn btn-custom-primary">Save Event</button>
         </div>
       </div>
     </form>
@@ -178,13 +177,13 @@
       <div class="modal-content">
         <div class="modal-header">
           <h5 class="modal-title" id="repertoireModalLabel">Add Repertoire</h5>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          <button type="button" class="btn btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
           {{ repertoire_form|crispy }}
         </div>
         <div class="modal-footer">
-          <button type="submit" class="btn btn-primary">Save Repertoire</button>
+          <button type="submit" class="btn btn-custom-primary">Save Repertoire</button>
         </div>
       </div>
     </form>
@@ -200,13 +199,13 @@
       <div class="modal-content">
         <div class="modal-header">
           <h5 class="modal-title" id="commentModalLabel">Add Comment</h5>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          <button type="button" class="btn btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
           {{ form|crispy }}
         </div>
         <div class="modal-footer">
-          <button type="submit" class="btn btn-primary">Post Comment</button>
+          <button type="submit" class="btn btn-custom-primary">Post Comment</button>
         </div>
       </div>
     </form>
