--- a/templates/reeds/reed_list.html
+++ b/templates/reeds/reed_list.html
@@ -37,7 +37,7 @@
         </select>
       </div>
       <div class="col-md-4 d-flex align-items-end">
-        <a href="{% url 'reed_list' %}" class="btn btn-secondary">Clear</a>
+        <a href="{% url 'reed_list' %}" class="btn btn-custom-secondary">Clear</a>
       </div>
     </form>
 
@@ -68,9 +68,11 @@
           </tbody>
         </table>
     </div>
-    <div class="col-12">
-      <a href="{% url 'reed_create' %}" class="btn btn-primary mb-3">Add a new reed</a>
-    </div>
+    {% if user.is_authenticated %}
+      <div class="col-12">
+        <a href="{% url 'reed_create' %}" class="btn btn-custom-primary mb-3">Add a new reed</a>
+      </div>
+    {% endif %}
   </div>
 </section>
 
