--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -11,10 +11,9 @@
       <form method="post" action="{% url 'account_login' %}">
         {% csrf_token %}
         {{ form|crispy }}
-        <button type="submit" class="btn btn-primary mt-3">Login</button>
+        <button type="submit" class="btn btn-custom-primary mt-3">Go for it!</button>
       </form>
       <p class="mt-3">
-        <a href="{% url 'account_reset_password' %}">Forgot password?</a> |
         <a href="{% url 'account_signup' %}">Create an account</a>
       </p>
     </div>
