--- a/templates/account/logout.html
+++ b/templates/account/logout.html
@@ -8,8 +8,8 @@
   <div class="col-md-6 text-center">
     <h2 class="mb-4">You are now logged out</h2>
     <p class="mb-4">Thank you for visiting Reedmakers.</p>
-    <a href="{% url 'account_login' %}" class="btn btn-primary">Log in again</a>
-    <a href="{% url 'home' %}" class="btn btn-secondary ms-2">Return to Home</a>
+    <a href="{% url 'account_login' %}" class="btn btn-custom-primary">Log in again</a>
+    <a href="{% url 'home' %}" class="btn btn-custom-secondary ms-2">Return to Home</a>
   </div>
 </div>
 {% endblock %}
