--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -10,7 +10,7 @@
     <form method="post" action="{% url 'account_signup' %}">
       {% csrf_token %}
       {{ form|crispy }}
-      <button type="submit" class="btn btn-primary w-100 mt-3">Sign Up</button>
+      <button type="submit" class="btn btn-custom-primary mt-3">Sign Up</button>
     </form>
     <p class="mt-3 text-center">
       Already have an account?
