--- a/templates/components/_navbar.html
+++ b/templates/components/_navbar.html
@@ -1,15 +1,15 @@
 <nav class="navbar navbar-expand-lg fixed-top">
   <div class="container">
-    <!-- Brand (adjusted to the left) -->
+    <!-- Logo -->
     <a class="navbar-brand" href="{% url 'home' %}">Reedstudio</a>
 
-    <!-- Toggler (hamburgare) direkt efter brand -->
+    <!-- Toggler (hamburger)  -->
     <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
 
-    <!-- Right-aligned buttons (small screens only) -->
+    <!-- Right-aligned buttons on small screens -->
     <div class="d-flex d-lg-none ms-2">
       {% if user.is_authenticated %}
         <button class="btn btn-sm btn-custom-primary me-2" data-bs-toggle="modal" data-bs-target="#logoutModal">
