--- a/templates/home.html
+++ b/templates/home.html
@@ -13,14 +13,13 @@
             </p>
         </div>
         <div class="col-12 col-xl-6">
-            <img src="{% static 'images/reedcase_1280.jpg' %}"
+            <img src="{% static 'images/content/reedcase_1280.jpg' %}"
             alt="Image illustrating a reed"
             class="img-fluid w-100 object-fit-cover"
             style="max-height: 300px;"> 
         </div>
     </div>
 </header>
-
 
 <!-- Services section -->
 <section id="services" class="container section mb-3">
